--- a/src/styles/sass/partials/variables.scss
+++ b/src/styles/sass/partials/variables.scss
@@ -3,9 +3,11 @@ $text_color: #555;
 $secondary_text_color: #999;
 $link_color: #7291A2;
 $font-family: 'georgia, times, serif';
+$secondary_font-family: helvetica, arial, sans-serif;
 $line-height: 1.4em;
 
 $font_size: 13px;
+$secondary_font_size: 11px;
 
 // misc
 $pale_background: #eee
