Style manifest now references article and post_navigator partials

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,3 +1,5 @@
 @import "partials/global_imports";
 @import "partials/base";
 @import "partials/structure";
+@import "partials/article";
+@import "partials/post_navigator";
