--- a/src/styles/sass/partials/article.scss
+++ b/src/styles/sass/partials/article.scss
@@ -1,13 +1,11 @@
-@import "partials/variables";
+@import "partials/global_imports";
 
 article {
   margin-bottom:40px;
   
   header time {
     margin-bottom:15px;
-    color: $secondary_text_color;
-    font-family: $secondary_font_family;
-    font-size: $secondary_font_size;
+    @include secondary_text
   }
 
   section {
@@ -20,8 +18,6 @@ article {
   
   footer small,
   article footer small a {
-    font-family: $secondary_font_family;
-    color: $secondary_text_color;
-    font-size: $secondary_font_size;
+    @include secondary_text
   }
 }
