--- a/src/styles/sass/partials/variables.scss
+++ b/src/styles/sass/partials/variables.scss
@@ -2,7 +2,7 @@
 $text_color: #555;
 $secondary_text_color: #999;
 $link_color: #7291A2;
-$font-family: 'georgia, times, serif';
+$font-family: georgia, times, serif;
 $secondary_font-family: helvetica, arial, sans-serif;
 $line-height: 1.4em;
 
