--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,5 +1,9 @@
 @import "partials/global_imports";
 @import "partials/base";
 @import "partials/structure";
+@import "partials/header";
+@import "partials/secondary_content";
+@import "partials/primary_content";
 @import "partials/article";
 @import "partials/post_navigator";
+@import "partials/comments";
